--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.315",
     "react-router-dom": "^7.12.0",
     "react-simple-typewriter": "^5.0.1",
-    "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.5.3",
     "simple-icons": "^16.6.0",
     "swiper": "^12.0.3",
@@ -36,7 +36,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@types/react": "^19.2.5",
+    "@types/react": "^18.3.27",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
