--- a/package.json
+++ b/package.json
@@ -12,32 +12,32 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@google/generative-ai": "^0.24.1",
-    "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^9.5.0",
+    "@react-three/drei": "^9.105.6",
+    "@react-three/fiber": "^8.16.6",
     "autoprefixer": "^10.4.23",
-    "framer-motion": "^12.27.1",
+    "framer-motion": "^11.1.7",
     "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
     "maath": "^0.10.8",
-    "openai": "^6.16.0",
+    "openai": "^4.28.0",
     "postcss": "^8.5.6",
     "prop-types": "^15.8.1",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-icons": "^5.5.0",
-    "react-parallax-tilt": "^1.7.315",
-    "react-router-dom": "^7.12.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-parallax-tilt": "^1.7.224",
+    "react-router-dom": "^6.23.1",
     "react-simple-typewriter": "^5.0.1",
-    "react-vertical-timeline-component": "^3.5.3",
-    "simple-icons": "^16.6.0",
-    "swiper": "^12.0.3",
+    "react-vertical-timeline-component": "^3.6.0",
+    "simple-icons": "^11.10.0",
+    "swiper": "^11.1.3",
     "tailwindcss": "^3.4.17",
-    "three": "^0.182.0"
+    "three": "0.164.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@types/react": "^18.3.27",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
